tests/snapshots/examples_fixtures/aoc__2025__aoc_day12_refactored.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day12_refactored.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `contains`.

  examples/aoc/2025/aoc_day12_refactored.flx:13:26
   |
13 |     fn has_char(s, ch) { contains(chars(s), ch) }
   |                          ^^^^^^^^

Hint:
  Define it first: let contains = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day12_refactored.flx:17:9
   |
17 |         fold(chars(s), 0, /(acc, c) -> if c == "#" { acc + 1 } else { acc })
   |         ^^^^

Hint:
  Define it first: let fold = ...;


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_refactored.flx:24:27
   |
24 |             if in_block { push(acc, cur_size) } else { acc }
   |                           ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `map`.

  examples/aoc/2025/aoc_day12_refactored.flx:51:46
   |
51 |     tokens |> filter(/t -> trim(t) != "") |> map(/t -> parse_int(t))
   |                                              ^^^

Hint:
  Define it first: let map = ...;


error[E004]: Undefined Variable

I can't find a value named `filter`.

  examples/aoc/2025/aoc_day12_refactored.flx:64:44
   |
64 |         let parts    = split(line, " ") |> filter(/t -> trim(t) != "")
   |                                            ^^^^^^

Hint:
  Define it first: let filter = ...;


error[E004]: Undefined Variable

I can't find a value named `slice`.

  examples/aoc/2025/aoc_day12_refactored.flx:68:42
   |
68 |         let counts   = parse_area_counts(slice(parts, 1, len(parts)))
   |                                          ^^^^^

Hint:
  Define it first: let slice = ...;

Help:
  Did you mean `line`?


error[E004]: Undefined Variable

I can't find a value named `push`.

  examples/aoc/2025/aoc_day12_refactored.flx:70:9
   |
70 |         push(acc, (safe_int(bounds, 0), safe_int(bounds, 1), counts)))
   |         ^^^^

Hint:
  Define it first: let push = ...;


error[E004]: Undefined Variable

I can't find a value named `fold`.

  examples/aoc/2025/aoc_day12_refactored.flx:90:5
   |
90 |     fold(areas, 0, /(acc, area) -> {
   |     ^^^^

Hint:
  Define it first: let fold = ...;

Found 8 errors.
== stdout ==
<not executed>
